--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "description": "backend server using node jss",
   "main": "server.js",
   "scripts": {
-    "test": "npm server.js"
+    "test": "npm server.js",
+    "dev" : "nodemon server.js"
   },
   "author": "713522AM081",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
